overflow dropdown fixed

--- a/src/app/space-group/group-story/group-story.component.scss
+++ b/src/app/space-group/group-story/group-story.component.scss
@@ -9,7 +9,6 @@
     height: 100%;
     border-left: 2px solid #e7e7e7;
     border-right: 2px solid #e7e7e7;
-    overflow-y: scroll;
     background: #fafafa;
     border-radius: 0;
   }
